Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26916

Welcome: Items without image are drawn incorrectly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 7.0.0-beta1
    • All Other Issues
    • None
    • c9374b4d74 (qt-creator/qt-creator/master) c9374b4d74 (qt-creator/qt-creator/qmlprojectstorage)

    Description

      For a welcome screen item without an image (Marketplace items are without image for a few seconds, while it loads) are drawn with a fallback text. And the hover effect should show a solid rectangle in the background instead of the blurred image.

      Problems: The rendering of the fallback text happens with margins that are inconsistent with the rest. And the hover effect has no background at all which causes two text being drawn on top of each other.

      This is a regression that came with the redesign of the Welcome screen.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes