Core: Fix drawing of items without images

For items without images (e.g. Marketplace items during the loading
phase), the description text is drawn as fallback.

This change fixes the layout of the fallback text. Also, The drawing of
the hover effect is fixed by drawing a solid rectancgle instead of the
"blurred" image.

Fixes: QTCREATORBUG-26916
Change-Id: Icd1151d3b9412752a482abf869a2ec9ff5c3465e
Reviewed-by: Christian Stenger <christian.stenger@qt.io>